--- a/renewal/css/style.css
+++ b/renewal/css/style.css
@@ -10,6 +10,12 @@ font-family: 'Pacifico', cursive; */
     font-weight: 700;
     font-style: normal;
 }
+@font-face {
+    font-family: 'BMJUA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 html {scroll-behavior: smooth;}
@@ -24,7 +30,7 @@ a {text-decoration: none; color: #333;}
     display: block;
 }
 .container {
-    width: 1280px;
+    width: 1400px;
     margin: 0 auto;
 }
 
@@ -32,6 +38,7 @@ a {text-decoration: none; color: #333;}
 .cabin {font-family: 'Cabin', sans-serif;}
 .noto {font-family: 'Noto Sans KR', sans-serif;}
 .line_f {font-family: 'LINESeedKR-Bd';}
+.jua {font-family: 'BMJUA';}
 
 /* 컬러 */
 :root {
@@ -366,7 +373,7 @@ a {text-decoration: none; color: #333;}
     justify-content: space-between;
     align-items: center;
     margin: 40px 0 100px;
-    width: 1280px; height: 85px;
+    width: 1400px; height: 95px;
     background-color: #fff;
     border-radius: 70px;
     box-shadow: 2px 3px 9px #42424258;
@@ -532,34 +539,170 @@ a {text-decoration: none; color: #333;}
 
 .main_wrap {
     display: flex;
-    justify-content: space-between;
-    padding: 0 130px;
-    background-color: #fff;
-    gap: 50px;
+    justify-content: center;
+    width: 100%;
+    gap: 30px;
 }
-.main_wrap .right_wrap {}
-.main_wrap .right_wrap .r_ornament {}
-.main_wrap .right_wrap .right_img {
+.main_wrap .right_wrap {
     position: relative;
-    width: 500px;
+}
+/* 장식 */
+.main_wrap .right_wrap .r_ornament {}
+.right_wrap .r_ornament .extra {
+    position: absolute;
+    bottom: 208px; left: -150px;
+    width: 350px; height: 80px;
+    background-color: rgb(255, 72, 0);
+    border-radius: 50px;
+    transform: rotate(41deg);
+}
+.right_wrap:hover .r_ornament .extra {
+    animation: extra 1s linear alternate infinite;
+} 
+@keyframes extra {
+    0% {bottom: 208px; left: -150px;}
+    100% {bottom: 220px; left: -130px;}
+}
+.right_wrap .r_ornament .basic {
+    position: absolute;
+    bottom: 145px; left: -85px;
+    width: 260px; height: 50px;
+    background-color: rgb(255, 115, 0);
+    border-radius: 50px;
+    transform: rotate(41deg);
+}
+.right_wrap:hover .r_ornament .basic {
+    animation: basic 1s linear alternate infinite;
+} 
+@keyframes basic {
+    0% {bottom: 145px; left: -85px;}
+    100% {bottom: 140px; left: -70px;}
+}
+.right_wrap .r_ornament .o_circle_r {
+    position: absolute;
+    top: 470px; left: -72px;
+    background-color: var(--main-color);
+    width: 30px; height: 30px;
+    border-radius: 50%;
+}
+.right_wrap:hover .r_ornament .o_circle_r {
+    animation: o_circle_r 1s linear alternate infinite;
+}
+@keyframes o_circle_r {
+    0% {top: 470px; left: -72px;}
+    100% {top: 450px; left: -82px;}
+}
+.right_wrap .r_ornament .b_circle {
+    position: absolute;
+    top: -42px; right: 76px;
+    width: 160px; height: 88px;
+    background-color: var(--point-sub-color);
+    border-radius: 50%;
+}
+.right_wrap:hover .r_ornament .b_circle {
+    animation: b_circle 1s linear alternate infinite;
+}
+@keyframes b_circle {
+    0% {top: -42px; right: 76px; transform: scale(1,1);}
+    100% {top: -52px; right: 76px; transform: scale(1.1,1.1);}
+}
+.right_wrap .r_ornament .b_circle span {
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 18px;
+    line-height: 1.3;
+    display: block;
+}
+.right_wrap .r_ornament .o_circle_l {
+    position: absolute;
+    top: 47px; right: 48px;
+    background-color: var(--main-color);
+    width: 23px; height: 23px;
+    border-radius: 50%;
+}
+.right_wrap:hover .r_ornament .o_circle_l {
+    animation: o_circle_l 1s linear alternate infinite;
+}
+@keyframes o_circle_l {
+    0% {top: 47px; right: 48px;}
+    100% {top: 22px; right: 38px;}
+}
+
+.main_wrap .right_wrap .right_img {
+    width: 600px; 
 }
 .main_wrap .right_wrap .right_img img {
     width: 100%;
-    position: absolute;
-    top: 0; left: 0;
+    box-shadow: 5px 17px 20px rgba(0, 0, 0, 0.17);
 }
 
-.main_wrap .left_wrap {}
-.main_wrap .left_wrap .l_ornament {}
-.main_wrap .left_wrap .left_img {
+.main_wrap .left_wrap {
     position: relative;
-    width: 500px;
+    transition: 0.3s;
+}
+/* 장식 */
+.main_wrap .left_wrap .l_ornament {}
+.left_wrap .l_ornament .extra {
+    position: absolute;
+    top: 140px; right: -123px;
+    width: 290px; height: 50px;
+    background-color:rgb(255, 81, 0);
+    border-radius: 50px;
+    transform: rotate(41deg);
+}
+.left_wrap:hover .l_ornament .extra {
+    animation: extra_l 1s linear alternate infinite;
+}
+@keyframes extra_l {
+    0% {top: 140px; right: -123px;}
+    100% {top: 110px; right: -113px;}
+}
+.left_wrap .l_ornament .yellow {
+    position: absolute;
+    top: 255px; right: -115px;
+    width: 200px; height: 35px;
+    background-color: rgb(255, 187, 0);
+    border-radius: 50px;
+    transform: rotate(41deg);
+}
+.left_wrap:hover .l_ornament .yellow {
+    animation: yello 1s linear alternate infinite;
+}
+@keyframes yello {
+    0% {top: 255px; right: -115px;}
+    100% {top: 235px; right: -135px;}
+}
+.left_wrap .l_ornament .rime_circle {
+    position: absolute;
+    bottom: 225px; right: -19px;
+    width: 60px; height: 60px;
+    background-color: var(--point-color);
+    border-radius: 50px;
+}
+.left_wrap:hover .l_ornament .rime_circle {
+    animation: rime_circle 1s linear alternate infinite;
+}
+@keyframes rime_circle {
+    0% {bottom: 225px; right: -19px; transform: scale(1,1);}
+    100% {bottom: 245px; right: -30px; transform: scale(1.2,1.2);}
+}
+.left_wrap .l_ornament .o_circle {
+    position: absolute;
+    bottom: 175px; right: 48px;
+    background-color: var(--main-color);
+    width: 23px; height: 23px;
+    border-radius: 50%;
+}
+
+.main_wrap .left_wrap .left_img {
+    width: 600px;
 }
 .main_wrap .left_wrap .left_img img {
     width: 100%;
-    position: absolute;
-    top: 0; left: 0;
+    box-shadow: 5px 17px 20px rgba(0, 0, 0, 0.17);
 }
+
 .main_bg {
     position: relative;
     height: 100vh;
@@ -570,7 +713,9 @@ a {text-decoration: none; color: #333;}
 .main_bg::after {
     content: '';
     position: absolute;
-    top: -500px; right: 0;
-    width: 1300px; height: 780px;
+    top: -1220px;
+    right: 0;
+    width: 1300px;
+    height: 746px;
     background-color: var(--sub-color);
 }
