--- a/renewal/css/style.css
+++ b/renewal/css/style.css
@@ -49,6 +49,7 @@ a {text-decoration: none; color: #333;}
     --sub-color: #ff7c03;
     --point-color: #c0f21d;
     --point-sub-color: #476cff;
+    --sub-text-color: #a49895;
 }
 
 
@@ -535,8 +536,7 @@ a {text-decoration: none; color: #333;}
 
 
 /* 메인 이미지 */
-.main_wrapper {}
-
+.main_wrapper {height: 150px;}
 .main_wrap {
     display: flex;
     justify-content: center;
@@ -547,6 +547,9 @@ a {text-decoration: none; color: #333;}
     position: relative;
 }
 /* 장식 */
+.r_ornament>div, .l_ornament>div {
+    box-shadow: 2px 6px 8px rgba(0, 0, 0, 0.1);
+}
 .main_wrap .right_wrap .r_ornament {}
 .right_wrap .r_ornament .extra {
     position: absolute;
@@ -594,7 +597,7 @@ a {text-decoration: none; color: #333;}
 }
 .right_wrap .r_ornament .b_circle {
     position: absolute;
-    top: -42px; right: 76px;
+    top: -48px; right: 76px;
     width: 160px; height: 88px;
     background-color: var(--point-sub-color);
     border-radius: 50%;
@@ -602,9 +605,12 @@ a {text-decoration: none; color: #333;}
 .right_wrap:hover .r_ornament .b_circle {
     animation: b_circle 1s linear alternate infinite;
 }
+.right_wrap .r_ornament .b_circle span:hover {
+    color: var(--point-color);
+}
 @keyframes b_circle {
-    0% {top: -42px; right: 76px; transform: scale(1,1);}
-    100% {top: -52px; right: 76px; transform: scale(1.1,1.1);}
+    0% {top: -48px; right: 76px; transform: scale(1,1);}
+    100% {top: -52px; right: 76px; transform: scale(1.3,1.3);}
 }
 .right_wrap .r_ornament .b_circle span {
     color: #fff;
@@ -685,7 +691,7 @@ a {text-decoration: none; color: #333;}
 }
 @keyframes rime_circle {
     0% {bottom: 225px; right: -19px; transform: scale(1,1);}
-    100% {bottom: 245px; right: -30px; transform: scale(1.2,1.2);}
+    100% {bottom: 245px; right: -30px; transform: scale(1.3,1.3);}
 }
 .left_wrap .l_ornament .o_circle {
     position: absolute;
@@ -694,28 +700,102 @@ a {text-decoration: none; color: #333;}
     width: 23px; height: 23px;
     border-radius: 50%;
 }
+.left_wrap:hover .l_ornament .o_circle {
+    animation: o_circle 1s linear alternate infinite;
+}
+@keyframes o_circle {
+    0% {bottom: 175px; right: 48px;}
+    100% {bottom: 195px; right: 60px;}
+}
 
 .main_wrap .left_wrap .left_img {
     width: 600px;
 }
 .main_wrap .left_wrap .left_img img {
     width: 100%;
-    box-shadow: 5px 17px 20px rgba(0, 0, 0, 0.17);
+    box-shadow: 5px 17px 30px rgba(0, 0, 0, 0.3);
 }
 
 .main_bg {
     position: relative;
-    height: 100vh;
+    height: 300vh;
     background-color: var(--bg-sub-color);
-    margin-top: 600px;
+    margin-top: 630px;
     z-index: -100;
 }
 .main_bg::after {
-    content: '';
+    content: "";
     position: absolute;
-    top: -1220px;
-    right: 0;
-    width: 1300px;
-    height: 746px;
+    top: -620px; right: 0px;
+    width: 1300px; height: 875px;
     background-color: var(--sub-color);
+}
+
+
+/* introduce */
+.introduce {
+    margin-top: 300px;
+    position: relative;
+}
+.introduce .title {}
+.introduce .title h2 {
+    font-size: 45px;
+    font-weight: 700;
+    display: inline-block;
+    margin: 50px 20px 50px 0;
+}
+.introduce .title span {
+    font-size: 40px;
+    font-weight: 500;
+    display: inline-block;
+    color: var(--sub-text-color);
+}
+.introduce .img_wrap {
+    margin-bottom: 80px;
+}
+.introduce .img_wrap .int_img {
+    width: 100%;
+    height: 100vh;
+    background: url(https://i.postimg.cc/mgPDWXj8/introduce-04.jpg) no-repeat center;
+    background-size: cover;
+}
+.introduce .text_wrap {
+    position: absolute;
+    bottom: -150px; left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 92%;
+}
+.introduce .text_wrap .int_text {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    padding: 40px;
+}
+.introduce .text_wrap .int_text>div {
+    width: 33.3333%;
+}
+.introduce .text_wrap .int_text p {
+    font-size: 20px;
+    line-height: 2;
+    font-family: 'Noto Sans KR', sans-serif;;
+}
+.text_wrap .int_text .last_p p {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.text_wrap .plus {
+    position: absolute;
+    bottom: 30px; right: 23px;
+}
+.text_wrap .plus span {
+    color: var(--main-color);
+    font-size: 20px;
+}
+.text_wrap .plus i {
+    color: var(--main-color);
+    font-size: 20px;
 }
