--- a/renewal/css/style.css
+++ b/renewal/css/style.css
@@ -272,7 +272,7 @@ a {text-decoration: none; color: #333;}
     top: 160px; left: 450px;
     width: 200px; height: 200px;
     background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,0) 35%, rgba(255, 255, 255, 0.177) 100%); 
+    background: linear-gradient(-10deg, rgba(255,255,255,0) 35%, rgba(255, 255, 255, 0.2) 100%); 
     border-radius: 50%;
     mix-blend-mode: lighten;
     backdrop-filter: blur(5px);
@@ -283,7 +283,7 @@ a {text-decoration: none; color: #333;}
     top: 310px; right: 280px;
     width: 250px; height: 250px;
     background: rgb(255,255,255);
-    background: linear-gradient(120deg, rgba(255,255,255,0) 35%, rgba(255, 255, 255, 0.177) 100%);
+    background: linear-gradient(120deg, rgba(255,255,255,0) 35%, rgba(255, 255, 255, 0.2) 100%);
     border-radius: 50%;
     mix-blend-mode: lighten;
     backdrop-filter: blur(5px);
@@ -294,7 +294,7 @@ a {text-decoration: none; color: #333;}
     bottom:60px; left: 750px;
     width: 180px; height: 180px;
     background: rgb(255,255,255);
-    background: linear-gradient(-120deg, rgba(255,255,255,0) 35%, rgba(255, 255, 255, 0.177) 100%);
+    background: linear-gradient(-120deg, rgba(255,255,255,0) 35%, rgba(255, 255, 255, 0.253) 100%);
     border-radius: 50%;
     mix-blend-mode: lighten;
     backdrop-filter: blur(5px);
@@ -342,7 +342,7 @@ a {text-decoration: none; color: #333;}
     display: block;
     font-size: 230px; line-height: 1.3;
     text-align: center;
-    color: var(--sub-color);
+    color: var(--extra-color);
 }
 .i_wrap .i_title span.second {
     letter-spacing: 20px;
@@ -546,6 +546,7 @@ a {text-decoration: none; color: #333;}
 .b_circle span {
     color: #fff;
     font-size: 20px;
+    line-height: 1.2;
     display: block;
     margin-top: 20px;
     /* transition: 0.3s; */
@@ -712,7 +713,7 @@ a {text-decoration: none; color: #333;}
 
 .main_bg {
     position: relative;
-    height: 300vh;
+    height: 250vh;
     background-color: var(--bg-sub-color);
     margin-top: 630px;
     z-index: -100;
@@ -730,6 +731,7 @@ a {text-decoration: none; color: #333;}
 .introduce {
     position: relative;
     margin-top: 300px;
+    z-index: 500;
 }
 .introduce .title {}
 .introduce .title h2 {
@@ -753,17 +755,19 @@ a {text-decoration: none; color: #333;}
     background: url(https://i.postimg.cc/mgPDWXj8/introduce-04.jpg) no-repeat center;
     background-size: cover;
 }
+
 .introduce .int_text {
     position: absolute;
     top: 192px; left: 45px;
     background-color: rgba(255, 255, 255, 0.7);
     width: 570px;
-    padding: 70px 45px 50px;
+    padding: 70px 50px 50px;
     box-sizing: border-box;
+    border-radius: 5px 100px 5px 100px;
     box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2);
 }
 .introduce .text_wrap .int_text p {
-    font-size: 18px;
+    font-size: 17px;
     line-height: 2.2;
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 500;
@@ -779,7 +783,7 @@ a {text-decoration: none; color: #333;}
 
 .introduce .plus {
     position: absolute;
-    bottom: -187px; left: 225px;
+    bottom: -15px; left: 186px;
 }
 .introduce .plus a {
     font-size: 23px;
@@ -789,6 +793,7 @@ a {text-decoration: none; color: #333;}
     background-color: var(--main-color);
     padding: 10px 32px;
     border-radius: 50px;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
 .introduce .plus a:hover {
@@ -803,14 +808,22 @@ a {text-decoration: none; color: #333;}
 .cursor_wrap {}
 .cursor {
     position: absolute;
-    top: 50%; left: 25%;
-    /* transform: translate(-50%,-50%); */
-    width: 90px; height: 90px;
+    top: 0%; left: 0%;
+    width: 20px; height: 20px;
     background-color: #ff4800;
     border-radius: 50%;
     z-index: 100;
-    mix-blend-mode: lighten;
-    backdrop-filter: invert(100%);
     scroll-behavior: smooth;
     opacity: 0;
+    /* transition: 0.1s; */
 }
+.cursor.active {
+    width: 90px; height: 90px;
+    mix-blend-mode: lighten;
+    backdrop-filter: invert(100%);
+}
+
+
+
+/* academy 소개 */
+.academy {margin-top: 300px;}
