--- a/renewal/css/style.css
+++ b/renewal/css/style.css
@@ -19,7 +19,13 @@ font-family: 'Pacifico', cursive; */
 
 
 html {scroll-behavior: smooth;}
-body {color: #333; background: var(--bg-color);}
+body {
+    color: #333; 
+    background: var(--bg-color);
+    transition: 0.4s;
+}
+body.on {background-color: #fff1db;}
+
 *{margin: 0; padding: 0;}
 li {list-style: none;}
 a {text-decoration: none; color: #333;}
@@ -46,6 +52,7 @@ a {text-decoration: none; color: #333;}
     --bg-sub-color: #fff1db;
     --main-color: #ff771d;
     --extra-color: #ff6600;
+    --ultra-ex-color :#ff6600;
     --sub-color: #ff7c03;
     --point-color: #c0f21d;
     --point-sub-color: #476cff;
@@ -524,13 +531,8 @@ a {text-decoration: none; color: #333;}
 
 
 /* 메인 이미지 */
-.main_wrapper {height: 150px; position: relative;}
-.main_wrap {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    gap: 30px;
-}
+.main_wrapper {position: relative;}
+.main_wrap {}
 
 /* 클릭버튼 */
 .b_circle {
@@ -542,6 +544,7 @@ a {text-decoration: none; color: #333;}
     text-align: center;
     box-shadow: 2px 6px 8px rgba(0, 0, 0, 0.1);
     z-index: 20;
+    transition: 0.3s;
 }
 .b_circle span {
     color: #fff;
@@ -555,14 +558,25 @@ a {text-decoration: none; color: #333;}
     color: var(--point-color);
 }
 .main_wrapper:hover .b_circle {
-    animation: b_circle 1s linear alternate infinite;
+    animation: b_circle 0.7s linear alternate infinite;
 }
 @keyframes b_circle {
     0% {top: -48px; transform: scale(1,1);}
     100% {top: -35px; transform: scale(1.2,1.2);}
 }
 
+.main_wrap .main_img {
+    display: flex;
+    justify-content: center;
+    /* width: 100%; */
+    gap: 30px;
+}
+.main_img:hover+.b_circle span{
+    color: var(--point-color);
+}
 
+
+/* right */
 .main_wrap .right_wrap {
     position: relative;
 }
@@ -638,6 +652,8 @@ a {text-decoration: none; color: #333;}
     box-shadow: 5px 17px 20px rgba(0, 0, 0, 0.17);
 }
 
+
+/* left */
 .main_wrap .left_wrap {
     position: relative;
     transition: 0.3s;
@@ -711,20 +727,6 @@ a {text-decoration: none; color: #333;}
     box-shadow: 5px 17px 30px rgba(0, 0, 0, 0.3);
 }
 
-.main_bg {
-    position: relative;
-    height: 250vh;
-    background-color: var(--bg-sub-color);
-    margin-top: 630px;
-    z-index: -100;
-}
-.main_bg::after {
-    content: "";
-    position: absolute;
-    top: -620px; right: 0px;
-    width: 1300px; height: 875px;
-    background-color: var(--sub-color);
-}
 
 
 /* introduce */
@@ -750,15 +752,16 @@ a {text-decoration: none; color: #333;}
     margin-bottom: 80px;
 }
 .introduce .img_wrap .int_img {
-    width: 80vw;
-    height: 80vh;
+    width: 80vw; height: 80vh;
     background: url(https://i.postimg.cc/mgPDWXj8/introduce-04.jpg) no-repeat center;
     background-size: cover;
 }
-
-.introduce .int_text {
+.text_wrap {
+    position: relative;
+}
+.introduce .text_wrap .int_text {
     position: absolute;
-    top: 192px; left: 45px;
+    top: -805px; left: 45px;
     background-color: rgba(255, 255, 255, 0.7);
     width: 570px;
     padding: 70px 50px 50px;
@@ -797,7 +800,7 @@ a {text-decoration: none; color: #333;}
     transition: 0.3s;
 }
 .introduce .plus a:hover {
-    background-color: var(--extra-color);
+    background-color: var(--ultra-ex-color);
 }
 .introduce .plus a span {
     color: var(--point-color);
@@ -825,5 +828,193 @@ a {text-decoration: none; color: #333;}
 
 
 
+/* line style */
+
+.line {
+    height: 40vh;
+    transform: translateY(-200px);
+    z-index: -100;
+}
+.line svg {}
+.path1 {
+    stroke-dasharray: 8000;
+    animation: drawPath1 6s linear infinite, floating 2.2s linear infinite;
+}
+
+@keyframes drawPath1 {
+    0% {
+    stroke-dashoffset: 6000;
+    }
+    100% {
+    stroke-dashoffset: 0;
+    }
+}
+
+@keyframes floating {
+    50% {
+    transform: translate3d(0, 40px, 0);
+    }
+}
+
+
+
+
 /* academy 소개 */
-.academy {margin-top: 300px;}
+.academy {margin-top: 50px;}
+.academy .title {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    margin: 50px 20px 40px 0;
+}
+.academy .title h2 {
+    font-size: 40px;
+    font-weight: 700;
+    margin-right: 20px;
+}
+.academy .title span {
+    font-size: 35px;
+    font-weight: 500;
+    display: inline-block;
+    color: var(--sub-text-color);
+    padding-top: 8px;
+}
+.academy_wrap {}
+.application_wrap {
+    float: left; width: 49%;
+}
+.application {
+    position: relative;
+    width: 100%; height: 700px;
+    background-color: var(--bg-color);
+    border-radius: 30px;
+}
+.application .point1 {
+    position: absolute;
+    top: -32px;
+    left: 50px;
+}
+.application .app_title {
+    display: block;
+    text-align: center;
+    padding: 50px 0 0px;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 1.5;
+}
+.application .app_title::after {
+    content: '~';
+    display: block;
+    color: var(--point-color);
+    font-size: 40px;
+    line-height: 0.8;
+}
+.application .app_sub_title {
+    display: block;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.application .app_sub_title span {
+    display: block;
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
+.application .point2 {
+    position: absolute;
+    top: 100px;
+    right: 54px;
+}
+
+.application form {
+    padding: 40px 30px;
+}
+.application form div {
+    margin-bottom: 7px;
+    padding: 0 70px;
+    height: 45px;
+}
+.application form label {
+    display: inline-block;
+    font-family: 'Cabin', sans-serif;
+    text-align: center;
+    font-size: 19px;
+    font-weight: 500;
+    width: 150px; height: 45px;
+    background-color: #ffce88;
+    border-radius: 2px;
+    transform: translateY(2px);
+    line-height: 45px;
+}
+.application form input.w_box {
+    outline: none; border: none;
+    height: 45px; width: 300px;
+    background-color: #fff;
+    border-radius: 2px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.application form .class_choice {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    position: relative;
+    z-index: 10;
+}
+.class_choice::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 2px;
+    right: 101px;
+    width: 300px; height: 45px;
+    background-color: #ffffff;
+    border-radius: 2px;
+    z-index: -1;
+}
+.application form .class_choice .radio {
+    margin-left: 32px;
+}
+.application form .class_choice .input_box {
+
+    
+}
+/* .application form .class_choice input {
+
+} */
+
+.application .name {}
+
+
+/* 이미지 전환 */
+
+.img-comp-container {
+    float: right; width: 49%;
+    position: relative;
+    height: 700px;
+    /*should be the same height as the images*/
+}
+
+.img-comp-img {
+    position: absolute;
+    width: auto;
+    height: auto;
+    overflow: hidden;
+}
+
+.img-comp-img img {
+    display: block;
+    vertical-align: middle;
+}
+
+.img-comp-slider {
+    position: absolute;
+    z-index: 9;
+    cursor: ew-resize;
+    /*set the appearance of the slider:*/
+    width: 40px;
+    height: 40px;
+    background-color: #2196F3;
+    opacity: 0.7;
+    border-radius: 50%;
+}
